# discoenv-oxidize

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.rust-builder  Jenkinsfile  README.md  service.properties  skaffold.yaml  sqlx-data.json
db/: Cargo.toml
db/src/: analyses.rs  bags.rs  lib.rs  preferences.rs  searches.rs  sessions.rs  users.rs
discoenv/: Cargo.toml
discoenv/src/: app_state.rs  auth.rs  config.rs  lib.rs  main.rs
discoenv/src/auth/: middleware.rs  mod.rs
discoenv/src/db/: bags.rs  groups.rs  lib.rs  permissions.rs  preferences.rs  sessions.rs  tools.rs
discoenv/src/errors/: mod.rs
discoenv/src/handlers/: analyses.rs  bags.rs  common.rs  config.rs  otel.rs  preferences.rs  searches.rs  sessions.rs  tokens.rs
discoenv/src/signals/: mod.rs
fake/: Cargo.toml
k8s/: discoenv.yaml  user-info.yaml
kubernetes/: user-info.yaml
service_errors/: Cargo.toml
service_errors/src/: lib.rs
service_signals/: Cargo.toml
user-info/: Cargo.toml  Dockerfile
user-info/src/: lib.rs  main.rs
user-info/src/handlers/: bags.rs  otel.rs
viceop/: Cargo.toml
viceop/src/: main.rs
