[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "bigdecimal", "ipnetwork", "json", "offline"] }
debuff = { git = "https://github.com/cyverse-de/p", rev="731f73b514b7a824bb797f2fb9f8d1c52491d10c" }
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive", "serde_derive"] }
utoipa = { version = "3.1.0", features = ["yaml", "axum_extras", "debug", "chrono", "time", "decimal", "uuid", "openapi_extensions"] }
pbjson-types = "0.5.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
    "serde",
]
