[package]
name = "discoenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["headers", "http2", "macros", "multipart", "ws"] }
axum-auth = { version = "0.4", default-features = false, features = ["auth-basic"] }
clap = { version = "4.1.8", features = ["derive", "env"] }
debuff = { git = "https://github.com/cyverse-de/p", rev="7f19864e9cdcc51f8c63a46a7206b01e8d0c24b2" }
pbjson-types = "0.5.1"
serde = { version = "1.0.154", features = ["derive", "serde_derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "bigdecimal", "ipnetwork", "json", "offline"] }
serde_yaml = "0.9.19"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time", "time"] }
utoipa = { version = "3.1.0", features = ["yaml", "axum_extras", "debug", "chrono", "time", "decimal", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.1.0", features = ["axum", "debug", "debug-embed"] }
async-nats = { version = "0.29.0", features = ["service"] }
futures = "0.3.28"
prost = "0.11.8"
reqwest = { version = "0.11.16", features = ["json", "blocking", "rustls", "tokio-rustls", "rustls-tls"] }
url = { version = "2.3.1", features = ["serde"] }
cached = { version = "0.43.0", features = ["serde", "serde_json"] }
chrono = { version = "0.4.24", features = ["serde"] }
exitcode = "1.1.2"
axum-server = { version = "0.4.7", features = ["tls-rustls", "tokio-rustls"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
    "serde",
]
