[package]
name = "service_errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["headers", "http2", "macros", "multipart", "ws"] }
debuff = { git = "https://github.com/cyverse-de/p", rev="b5e22577adef1a91b80ce3f468124fcdbeecc37d" }
serde = { version = "1.0.156", features = ["derive", "serde_derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "bigdecimal", "ipnetwork", "json", "offline"] }
thiserror = "1.0.39"
utoipa = { version = "3.1.0", features = ["yaml", "axum_extras", "debug", "chrono", "time", "decimal", "uuid", "openapi_extensions"] }
