[package]
name = "service_signals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
