[package]
name = "user-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["headers", "http2", "macros", "multipart", "ws"] }
axum-tracing-opentelemetry = { version = "0.10.0", features = ["jaeger", "tracing_subscriber_ext", "tracer", "otlp"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
service_errors = { path = "../service_errors" }
service_signals = { path = "../service_signals" }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
